deploy/kubernetes/mock-sms.yaml
apiVersion: v1
kind: Service
metadata:
  name: mock-sms
  namespace: inspectio
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: mock-sms
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-sms
  namespace: inspectio
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: mock-sms
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mock-sms
    spec:
      containers:
        - name: mock-sms
          image: inspectio-mock-sms:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
